--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light site-navbar-target"
 		id="ftco-navbar">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">Ahsan Khan</a>
+			<a class="navbar-brand" href="index.html">Nehal Ahmad</a>
 			<button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse"
 				data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menu
@@ -60,7 +60,7 @@
 						<h1>Ahsan Khan</h1>
 						<h2>I like
 							<span class="txt-rotate" data-period="2000"
-								data-rotate='[ "Coding.", "Software Development", "Problem Solving.", "Photography.", "Books."]'></span>
+								data-rotate='[ "Coding.", "Figma Designing", "Problem Solving.", "Photography.", "Books."]'></span>
 						</h2>
 					</div>
 				</div>
@@ -83,7 +83,7 @@
 					<div class="img-about img d-flex align-items-stretch">
 						<div class="overlay"></div>
 						<div class="img d-flex align-self-stretch align-items-center"
-							style="background-image:url(images/about.jpeg);">
+							style="background-image:url(a.jpeg);">
 						</div>
 					</div>
 				</div>
@@ -93,9 +93,9 @@
 							<h2 class="mb-4">About Me</h2>
 							<p>Here's a little about me</p>
 							<ul class="about-info mt-4 px-md-0 px-2">
-								<li class="d-flex"><span>Name:</span><span>test</span></li>
-								<li class="d-flex"><span>Email:</span><span>test@gmail.com</span></li>
-								<li class="d-flex"><span>Phone:</span><span>+92 XXX XXXXXXX</span></li>
+								<li class="d-flex"><span>Name:NEHAL AHMAD</span><span>test</span></li>
+								<li class="d-flex"><span>Email:nehalahmad@gmail.com</span><span>test@gmail.com</span></li>
+								<li class="d-flex"><span>Phone:9350850160</span><span>+92 XXX XXXXXXX</span></li>
 								<li class="d-flex"><span>Country:</span> <span>Pakistan</span></li>
 								<li class="d-flex"><span>City:</span><span>Karachi</span></li>
 							</ul>
@@ -132,10 +132,10 @@
 								<span class="flaticon-graduation-cap"></span>
 							</div>
 							<div class="text pl-3">
-								<h2>NED University of Engineering & Technology</h2>
+								<h2>National Taipai University of Technology, Taiwan</h2>
 								<span class="position">Bachelor of Engineering</span>
-								<p><strong>Computer Systems Engineering</strong></p>
-								<p>Karachi - Pakistan</p>
+								<p><strong>Indian institue of technologu</strong></p>
+								<p>India -bangalore</p>
 								<span class="date">2016-2020 (October)</span>
 							</div>
 						</div>
@@ -144,11 +144,11 @@
 								<span class="flaticon-book"></span>
 							</div>
 							<div class="text pl-3">
-								<h2>Adamjee Govt. Science College</h2>
+								<h2>Presidency University</h2>
 								<span class="position">Intermediate</span>
 								<p><strong>Pre-Engineering</strong></p>
-								<p>Karachi - Pakistan</p>
-								<span class="date">2014-2016</span>
+								<p>India -Bangalore</p>
+								<span class="date">2022-2024</span>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -194,7 +194,7 @@
 										<span class="position">TPS Worldwide</span>
 										<p class="date">Sept 2019 - Oct 2019</p>
 										<ul>
-											<li>Worked as support for their Intranet portal (TPSConnect)</li>
+											<li>Worked as designer </li>
 											<li>Created SharePoint MasterPages using SharePoint Designer</li>
 											<li>Developed Custom SharePoint WebParts</li>
 										</ul>
