--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
 					<div class="text text-center">
 						<span class="subheading">Hey! I am</span>
-						<h1>Ahsan Khan</h1>
+						<h1>Nehal Ahmad</h1>
 						<h2>I like
 							<span class="txt-rotate" data-period="2000"
 								data-rotate='[ "Coding.", "Figma Designing", "Problem Solving.", "Photography.", "Books."]'></span>
@@ -94,10 +94,10 @@
 							<p>Here's a little about me</p>
 							<ul class="about-info mt-4 px-md-0 px-2">
 								<li class="d-flex"><span>Name:NEHAL AHMAD</span><span>test</span></li>
-								<li class="d-flex"><span>Email:nehalahmad@gmail.com</span><span>test@gmail.com</span></li>
-								<li class="d-flex"><span>Phone:9350850160</span><span>+92 XXX XXXXXXX</span></li>
-								<li class="d-flex"><span>Country:</span> <span>Pakistan</span></li>
-								<li class="d-flex"><span>City:</span><span>Karachi</span></li>
+								<li class="d-flex"><span>Email:</span><span>nehalahmad@gmail.com</span></li>
+								<li class="d-flex"><span>Phone:</span><span>9350850160</span></li>
+								<li class="d-flex"><span>Country:</span> <span>India</span></li>
+								<li class="d-flex"><span>City:</span><span>Bangalore</span></li>
 							</ul>
 						</div>
 					</div>
@@ -144,11 +144,11 @@
 								<span class="flaticon-book"></span>
 							</div>
 							<div class="text pl-3">
-								<h2>Presidency University</h2>
-								<span class="position">Intermediate</span>
+								<h2>Jamia Millia Islamia, Central University, New Delhi, India</h2>
+								<span class="position">Bachelor of Engineering</span>
 								<p><strong>Pre-Engineering</strong></p>
 								<p>India -Bangalore</p>
-								<span class="date">2022-2024</span>
+								<span class="date">2011-2015</span>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -156,11 +156,11 @@
 								<span class="flaticon-book"></span>
 							</div>
 							<div class="text pl-3">
-								<h2>Merit 'n' Merit School</h2>
-								<span class="position">Matriculation</span>
-								<p><strong>Science</strong></p>
-								<p>Karachi - Pakistan</p>
-								<span class="date">2011-2014</span>
+								<h2>National Taipei University of Technology, Taiwan</h2>
+								<span class="position"> Ph.D. (Awarded)</span>
+								<p><strong> Machine Learning</strong></p>
+								<p> India -Indore</p>
+								<span class="date">2020-2023</span>
 							</div>
 						</div>
 					</div>
@@ -172,9 +172,10 @@
 								<span class="flaticon-suitcase"></span>
 							</div>
 							<div class="text pl-3">
-								<h2>Software Engineer</h2>
-								<span class="position">Geeks of Kolachi</span>
-								<p class="date">August 2021 - Present</p>
+								<h2> Assistant Professor</h2>
+								<span class="position"> Department of Computer Science and Engineering,
+ Presidency University, Bangalore</span>
+								<p class="date">August 2024 - Present</p>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -182,23 +183,16 @@
 								<span class="flaticon-suitcase"></span>
 							</div>
 							<div class="text pl-3">
-								<h2>Associate Software Engineer</h2>
-								<span class="position">TPS Worldwide</span>
-								<p class="date">Dec 2020 - May 2021</p>
+								<h2> Administrative Responsibilities</h2>
+								<span class="position">1. Instructor’s In-charge</span>
+								<span class="position">2. Chair Person</span>
+								<span class="position">3. Class Coordinator</span>
+								
 								<div class="c d-flex ftco-animate">
 									<div class="icon d-flex align-items-center justify-content-center">
 										<span class="flaticon-suitcase"></span>
 									</div>
-									<div class="text pl-3">
-										<h2>Intern</h2>
-										<span class="position">TPS Worldwide</span>
-										<p class="date">Sept 2019 - Oct 2019</p>
-										<ul>
-											<li>Worked as designer </li>
-											<li>Created SharePoint MasterPages using SharePoint Designer</li>
-											<li>Developed Custom SharePoint WebParts</li>
-										</ul>
-									</div>
+									
 								</div>
 							</div>
 						</div>
@@ -408,7 +402,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Contact Number</h3>
-							<p><a>+92 XXX XXXXXXX</a></p>
+							<p><a>+91 9350850160 </a></p>
 						</div>
 					</div>
 				</div>
@@ -419,7 +413,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Email Address</h3>
-							<p><a href="">test@gmail.com</a></p>
+							<p><a href="">nehalahmadcse@gmail.com</a></p>
 						</div>
 					</div>
 				</div>
