--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<ul class="navbar-nav nav ml-auto">
 					<li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 					<li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
-					<li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
+					<li class="nav-item"><a href="https://drive.google.com/file/d/14EId5ZPTz6l-E5a7SrRM3Co_kC6f7Qdn/view?usp=sharing" class="nav-link"><span>Resume</span></a></li>
 					<li class="nav-item"><a href="#project-section" class="nav-link"><span>Projects</span></a></li>
 					<li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 				</ul>
@@ -93,7 +93,7 @@
 							<h2 class="mb-4">About Me</h2>
 							<p>Here's a little about me</p>
 							<ul class="about-info mt-4 px-md-0 px-2">
-								<li class="d-flex"><span>Name:NEHAL AHMAD</span><span>test</span></li>
+								<li class="d-flex"><span>Name:</span><span>NEHAL AHMAD</span></li>
 								<li class="d-flex"><span>Email:</span><span>nehalahmad@gmail.com</span></li>
 								<li class="d-flex"><span>Phone:</span><span>9350850160</span></li>
 								<li class="d-flex"><span>Country:</span> <span>India</span></li>
@@ -103,7 +103,7 @@
 					</div>
 					<div class="counter-wrap ftco-animate d-flex mt-md-3">
 						<div class="text">
-							<p><a href="" class="btn btn-primary py-3 px-3">Download CV</a></p>
+							<p><a href="file:///C:/Users/MY%20PC/AppData/Local/Microsoft/Windows/INetCache/IE/TM0RVMDF/CV_Nehal_[1].pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
 						</div>
 					</div>
 				</div>
@@ -184,8 +184,8 @@
 							</div>
 							<div class="text pl-3">
 								<h2> Administrative Responsibilities</h2>
-								<span class="position">1. Instructor’s In-charge</span>
-								<span class="position">2. Chair Person</span>
+								<span class="position">1. Instructor’s In-charge</span></br>
+								<span class="position">2. Chair Person</span></br>
 								<span class="position">3. Class Coordinator</span>
 								
 								<div class="c d-flex ftco-animate">
