--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 								<span class="position"><strong>ITEC</strong></span>
 								<span><strong> - NED Universit of Engg. & Tech</strong></span>
 								<p class="date">June 2018</p>
-								<p>Karachi - Pakistan</p>
+								<p>India -Bangalore</p>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -265,7 +265,7 @@
 								<span class="position"><strong>Developer's Day</strong></span>
 								<span><strong> - FAST NUCES</strong></span>
 								<p class="date">Apr 2018</p>
-								<p>Karachi - Pakistan</p>
+								<p>India -Bangalore</p>
 							</div>
 						</div>
 					</div>
