--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Website</h3>
-							<p><a>ahsankhan.me</a></p>
+							<p><a>nehal Ahmad</a></p>
 						</div>
 					</div>
 				</div>
