--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="hero-image">
-            <img src="i3.png" alt="Trekkers">
+            <img src="h3.png" alt="Trekkers">
         </div>
     </section>
 
