--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="hero-image">
-            <img src="h3.png" alt="Trekkers">
+            <img src="i3.png" alt="Trekkers">
         </div>
     </section>
 
@@ -51,9 +51,7 @@
     </section>
 
     <section2>
-        <!DOCTYPE html>
-<html lang="en">
-<head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trekking Website</title>
@@ -150,8 +148,7 @@
             margin-bottom: 10px;
         }
     </style>
-</head>
-<body>
+
 
     <!-- Features Section -->
     <section class="features">
@@ -210,9 +207,7 @@
 
     </section2>
     <section3>
-        <!DOCTYPE html>
-<html lang="en">
-<head>
+        
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trekking Website - Top Treks & Reviews</title>
@@ -350,8 +345,7 @@
             color: #555;
         }
     </style>
-</head>
-<body>
+
 
     <!-- Top Treks Section -->
     <section class="top-treks">
@@ -414,12 +408,6 @@
     </section>
 
 
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trek Reservation FAQs</title>
     <style>
         /* General Styles */
         body {
@@ -507,8 +495,6 @@
             transform: rotate(180deg);
         }
     </style>
-</head>
-<body>
 
     <h1>Trek Reservation FAQs</h1>
 
@@ -632,8 +618,6 @@
 
 
 
-    <!DOCTYPE html>
-    <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
