--- a/page2.html
+++ b/page2.html
@@ -78,6 +78,12 @@
             background: #f8f8f8;
             padding: 20px;
         }
+        @media (max-width: 768px) {
+            .form-container img {
+                display: none;
+            }
+        }
+        
     </style>
 </head>
 <body>
