--- a/index.html
+++ b/index.html
@@ -618,102 +618,107 @@
 
 
 
+ 
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Aorbo Treks</title>
+        <title>Footer Section</title>
         <style>
             body {
-                font-family: Arial, sans-serif;
                 margin: 0;
-                padding: 0;
+                font-family: Arial, sans-serif;
                 background-color: #f4f4f4;
             }
-            .container {
+            .footer {
                 background-color: #333;
                 color: white;
-                padding: 40px;
+                padding: 40px 20px;
                 display: flex;
-                justify-content: space-between;
                 flex-wrap: wrap;
+                justify-content: space-between;
             }
-            .left {
-                max-width: 40%;
+            .footer-section {
+                flex: 1;
+                min-width: 250px;
+                margin: 10px;
             }
-            .left img {
-                width: 40px;
-            }
-            .store-links img {
-                width: 120px;
-                margin-top: 10px;
-            }
-            .column {
-                margin-right: 30px;
-            }
-            .column h3 {
-                margin-bottom: 15px;
-            }
-            .column a {
-                display: block;
-                color: white;
-                text-decoration: none;
-                margin-bottom: 10px;
-            }
-            .column a:hover {
-                text-decoration: underline;
-            }
-            .socials a {
-                margin-right: 10px;
+            .footer h2 {
                 font-size: 20px;
+            }
+            .footer p {
+                font-size: 14px;
+                line-height: 1.5;
+            }
+            .footer img {
+                width: 120px;
+                margin: 10px 5px 0 0;
+            }
+            .footer-links {
+                list-style: none;
+                padding: 0;
+            }
+            .footer-links li {
+                margin: 8px 0;
+            }
+            .footer-links a {
+                text-decoration: none;
+                color: white;
+            }
+            .social-icons {
+                display: flex;
+                gap: 15px;
+                font-size: 20px;
+            }
+            .social-icons a {
                 color: white;
                 text-decoration: none;
             }
-            .bottom {
+            .copyright {
                 text-align: center;
-                padding: 10px;
-                background-color: #222;
-                color: white;
+                padding-top: 20px;
+                font-size: 12px;
             }
         </style>
     </head>
     <body>
-        <div class="container">
-            <div class="left">
+        <footer class="footer">
+            <div class="footer-section">
                 <h2>Aorbo Treks</h2>
                 <p>Aorbo Treks helps travellers find and book treks easily by connecting them with trusted trek organizers. Whether you're going solo or with a group, we make trekking simple and hassle-free. 🚀</p>
-                <div class="store-links">
-                    <img src="google-play.png" alt="Get it on Google Play">
-                    <img src="app-store.png" alt="Download on the App Store">
-                </div>
+                <img src="ff1.png" alt="Get it on Google Play">
+                <img src="ff2.png" alt="Download on the App Store">
             </div>
-            <div class="column">
-                <h3>About Aorbo</h3>
-                <a href="#">About us</a>
-                <a href="#">Our Values</a>
-                <a href="#">Contact us</a>
+            <div class="footer-section">
+                <h2>About Aorbo</h2>
+                <ul class="footer-links">
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Our Values</a></li>
+                    <li><a href="#">Contact us</a></li>
+                </ul>
             </div>
-            <div class="column">
-                <h3>Information</h3>
-                <a href="#">T&C</a>
-                <a href="#">Privacy Policy</a>
-                <a href="#">Blogs</a>
-                <a href="#">FAQs</a>
-                <a href="#">User Agreement</a>
-                <a href="#">Insurance Partner</a>
+            <div class="footer-section">
+                <h2>Information</h2>
+                <ul class="footer-links">
+                    <li><a href="#">T&C</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Blogs</a></li>
+                    <li><a href="#">FAQs</a></li>
+                    <li><a href="#">User Agreement</a></li>
+                    <li><a href="#">Insurance Partner</a></li>
+                </ul>
             </div>
-            <div class="column">
-                <h3>Follow our socials</h3>
-                <div class="socials">
+            <div class="footer-section">
+                <h2>Follow our socials</h2>
+                <div class="social-icons">
                     <a href="#">📷</a>
                     <a href="#">🔍</a>
-                    <a href="#">📘</a>
-                    <a href="#">✖</a>
+                    <a href="#">🔵</a>
+                    <a href="#">❌</a>
                 </div>
             </div>
-        </div>
-        <div class="bottom">© 2025, All rights reserved</div>
-    </body>
-    </html>
+        </footer>
+        <div class="copyright">&copy; 2025, All rights reserved</div>
+    
     
 
 </body>
